--- a/StructExample/StructExample.csproj
+++ b/StructExample/StructExample.csproj
@@ -48,9 +48,11 @@
     <Compile Include="Enums\EnumFrequency.cs" />
     <Compile Include="Enums\EnumGears.cs" />
     <Compile Include="Enums\EnumWheelCompany.cs" />
+    <Compile Include="MediumCar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Soldier.cs" />
+    <Compile Include="SportCar.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
